# Marching-Image

./: .gitignore  CMakeLists.txt  Color.hpp  ColorMap.hpp  Dockerfile  ImageHandler.hpp  README.md  docker-compose.yml  main.cpp
backend/: CMakeLists.txt  Dockerfile  main.cpp
backend/header/: Color.hpp  ColorMap.hpp  ImageHandler.hpp  MarchingSquare.hpp  Mesh.hpp  Server.hpp
backend/src/: Color.cpp  ColorMap.cpp  ImageHandler.cpp  MarchingSquare.cpp  Mesh.cpp  Server.cpp
frontend/: Dockerfile
frontend/colormap/: index.html  package-lock.json  package.json
frontend/colormap/src/: App.css  App.tsx  index.css
frontend/colormap/src/components/: Colorpicker.tsx  ColorpickerList.tsx  ImageMapper.tsx  ImageUpload.tsx  MarchSquareDemo.tsx  ServerImageMapper.tsx
frontend/colormap/src/scripts/: color.ts  colorMapper.ts  imageHandeler.ts  lookups.ts  marchingSquares.ts  marchingWorker.ts  stlCreator.ts
header/: Color.hpp  ColorMap.hpp  ImageHandler.hpp  Server.hpp
src/: Color.cpp  ColorMap.cpp  ImageHandler.cpp  Server.cpp
